[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/TileMap.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/rooms/Door.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/rooms/Room.gd" type="Script" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 248, 120 )

[node name="Room" type="Node2D"]
script = ExtResource( 3 )

[node name="PlayerDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetector"]
shape = SubResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Layout" type="Node2D" parent="."]

[node name="Doors" type="Node2D" parent="."]

[node name="TileMap" parent="Doors" instance=ExtResource( 1 )]
tile_data = PoolIntArray( -458754, 11, 0, -524287, 12, 0, -65552, 17, 0, -131057, 15, 0, 131056, 18, 0, 65551, 16, 0, 524286, 13, 0, 458753, 14, 0 )

[node name="Top" parent="Doors" instance=ExtResource( 2 )]
position = Vector2( 0, -120 )

[node name="TopWall" parent="Doors" instance=ExtResource( 1 )]
tile_data = PoolIntArray( -458754, 3, 0, -458753, 3, 0, -524288, 3, 0, -524287, 3, 0 )

[node name="Bottom" parent="Doors" instance=ExtResource( 2 )]
position = Vector2( 0, 120 )
rotation = 3.14159

[node name="BottomWall" parent="Doors" instance=ExtResource( 1 )]
tile_data = PoolIntArray( 524286, 6, 0, 524287, 6, 0, 458752, 6, 0, 458753, 6, 0 )

[node name="Left" parent="Doors" instance=ExtResource( 2 )]
position = Vector2( -248, 0 )
rotation = -1.5708

[node name="LeftWall" parent="Doors" instance=ExtResource( 1 )]
tile_data = PoolIntArray( -65552, 5, 0, -16, 5, 0, 65520, 5, 0, 131056, 5, 0 )

[node name="Right" parent="Doors" instance=ExtResource( 2 )]
position = Vector2( 248, 0 )
rotation = 1.5708

[node name="RightWall" parent="Doors" instance=ExtResource( 1 )]
tile_data = PoolIntArray( -131057, 4, 0, -65521, 4, 0, 15, 4, 0, 65551, 4, 0 )
[connection signal="body_entered" from="PlayerDetector" to="." method="_on_PlayerDetector_body_entered"]
[connection signal="body_exited" from="PlayerDetector" to="." method="_on_PlayerDetector_body_exited"]
